Add new 'why' component to the numbers 2 page

--- a/content/numbers-2/index.yml
+++ b/content/numbers-2/index.yml
@@ -4,9 +4,9 @@ headernav: false
 showheader: false
 
 header:
-  - /_shared/header.md
+  - /_shared/header-sans-menu.md
 
-# sidebar:
+rightCol: true
 
 main:
   - body.md
