--- a/content/capitals/index.yml
+++ b/content/capitals/index.yml
@@ -4,9 +4,9 @@ headernav: false
 showheader: false
 
 header:
-  - /_shared/header.md
+  - /_shared/header-sans-menu.md
 
-sidebar:
+rightCol: ''
 
 main:
   - body.md
