'write for everyone' page and new right column component

--- a/content/accessibility-inclusivity/write-for-everyone/reading-age/index.yml
+++ b/content/accessibility-inclusivity/write-for-everyone/reading-age/index.yml
@@ -1,14 +1,12 @@
 layout: component/page
-pagetitle: numbers
+pagetitle: Why accessibile?
 headernav: false
 showheader: false
 
 header:
   - /_shared/header-sans-menu.md
 
-rightcol:
-  - right-col.md
-  - right-col-1.md
+rightcol: ''
 
 main:
   - body.md
