--- a/content/accessibility-inclusivity/understand-diversity/index.yml
+++ b/content/accessibility-inclusivity/understand-diversity/index.yml
@@ -6,7 +6,8 @@ showheader: false
 header:
   - /_shared/header-sans-menu.md
 
-rightCol: ''
+rightcol:
+  - right-column/component-1.md
 
 main:
   - body.md
