--- a/content/accessibility-inclusivity/why-accessible-content/index.yml
+++ b/content/accessibility-inclusivity/why-accessible-content/index.yml
@@ -6,7 +6,9 @@ showheader: false
 header:
   - /_shared/header-sans-menu.md
 
-rightCol: ''
+rightcol:
+  - right-column/component-1.md
+  - right-column/component-2.md
 
 main:
   - body.md
