--- a/content/accessibility-inclusivity/accessible-formats/index.yml
+++ b/content/accessibility-inclusivity/accessible-formats/index.yml
@@ -9,12 +9,14 @@ header:
 rightcol:
   - right-column/component-1.md
   - right-column/component-2.md
-  # - right-column/component-3.md
-  # - right-column/component-4.md
-  # - right-column/component-5.md
-  # - right-column/component-6.md
-  # - right-column/component-7.md
-  # - right-column/component-8.md
+  - right-column/component-3.md
+  - right-column/component-4.md
+  - right-column/component-5.md
+  - right-column/component-6.md
+  - right-column/component-7.md
+  - right-column/component-8.md
+  - right-column/component-9.md
+  - right-column/component-10.md
 
 main:
   - body.md
