'structure content' page updated

--- a/content/accessibility-inclusivity/structure-content/index.yml
+++ b/content/accessibility-inclusivity/structure-content/index.yml
@@ -6,7 +6,10 @@ showheader: false
 header:
   - /_shared/header-sans-menu.md
 
-rightCol: ''
+rightcol:
+  - right-column/component-1.md
+  - right-column/component-2.md
+  - right-column/component-3.md
 
 main:
   - body.md
