Add a print icon header to the 2nd prototype pages

--- a/content/accessibility-inclusivity/accessible-formats/index.yml
+++ b/content/accessibility-inclusivity/accessible-formats/index.yml
@@ -1,10 +1,10 @@
 layout: component/page
-pagetitle: Why accessibile?
+pagetitle: Accessibile formats
 headernav: false
 showheader: false
 
 header:
-  - /_shared/header-sans-menu.md
+  - /_shared/header-and-print.md
 
 rightcol:
   - right-column/component-1.md
