prototype v2, new component layout

--- a/content/accessibility-inclusivity-2/why-accessible-content/index.yml
+++ b/content/accessibility-inclusivity-2/why-accessible-content/index.yml
@@ -1,4 +1,4 @@
-layout: component/page
+layout: component/page.2
 pagetitle: Why accessibile?
 headernav: false
 showheader: false
@@ -6,12 +6,12 @@ showheader: false
 header:
   - /_shared/header-and-print.md
 
-rightcol:
-  - right-column/component-1.md
-  - right-column/component-2.md
-
 main:
-  - body.md
+  - body.1.md
+  - body.2.md
+  - right-column/component-1.md
+  - body.3.md
+  - right-column/component-2.md
 
 footer:
   - /_shared/footer.md
