--- a/content/accessibility-inclusivity-2/accessible-formats/index.yml
+++ b/content/accessibility-inclusivity-2/accessible-formats/index.yml
@@ -1,4 +1,4 @@
-layout: component/page
+layout: component/page.2
 pagetitle: Accessibile formats
 headernav: false
 showheader: false
@@ -6,20 +6,18 @@ showheader: false
 header:
   - /_shared/header-and-print.md
 
-rightcol:
+main:
+  - body.1.md
   - right-column/component-1.md
-  - right-column/component-2.md
+  - body.2.md
   - right-column/component-3.md
-  - right-column/component-4.md
+  - right-column/component-2.md
+  - body.3.md
   - right-column/component-5.md
+  - body.4.md
   - right-column/component-6.md
   - right-column/component-7.md
   - right-column/component-8.md
-  - right-column/component-9.md
-  - right-column/component-10.md
-
-main:
-  - body.md
 
 footer:
   - /_shared/footer.md
