Updates to part 2 of the prototype

--- a/content/accessibility-inclusivity-2/write-for-everyone/index.yml
+++ b/content/accessibility-inclusivity-2/write-for-everyone/index.yml
@@ -1,4 +1,4 @@
-layout: component/page
+layout: component/page.2
 pagetitle: Why accessibile?
 headernav: false
 showheader: false
@@ -6,18 +6,16 @@ showheader: false
 header:
   - /_shared/header-and-print.md
 
-rightcol:
-  - right-column/component-1.md
-  - right-column/component-2.md
-  - right-column/component-3.md
-  - right-column/component-4.md
-  - right-column/component-5.md
-  - right-column/component-6.md
-  - right-column/component-7.md
-  - right-column/component-8.md
-
 main:
-  - body.md
+  - body.1.md
+  - right-column/component-1.md
+  - body.2.md
+  - right-column/component-2.md
+  - right-column/component-4.md
+  - body.3.md
+  - right-column/component-6.md
+  - body.4.md
+  - right-column/component-8.md
 
 footer:
   - /_shared/footer.md
