--- a/content/accessibility-inclusivity-2/structure-content/index.yml
+++ b/content/accessibility-inclusivity-2/structure-content/index.yml
@@ -1,18 +1,16 @@
-layout: component/page
-pagetitle: Why accessibile?
+layout: component/page.2
+pagetitle: Structure content
 headernav: false
 showheader: false
 
 header:
   - /_shared/header-and-print.md
 
-rightcol:
-  - right-column/component-1.md
-  - right-column/component-2.md
-  - right-column/component-3.md
-
 main:
-  - body.md
+  - body.1.md
+  - right-column/component-1.md
+  - body.2.md
+  - right-column/component-3.md
 
 footer:
   - /_shared/footer.md
