--- a/package.json
+++ b/package.json
@@ -62,30 +62,30 @@
 		}
 	],
 	"dependencies": {
-		"@gov.au/accordion": "latest",
+		"@gov.au/accordion": "^3.0.5",
 		"@gov.au/animate": "latest",
-		"@gov.au/body": "latest",
-		"@gov.au/breadcrumbs": "latest",
-		"@gov.au/buttons": "latest",
-		"@gov.au/callout": "latest",
-		"@gov.au/control-input": "latest",
-		"@gov.au/core": "latest",
-		"@gov.au/cta-link": "latest",
-		"@gov.au/direction-links": "latest",
-		"@gov.au/footer": "latest",
-		"@gov.au/grid-12": "latest",
-		"@gov.au/header": "latest",
-		"@gov.au/headings": "latest",
-		"@gov.au/inpage-nav": "latest",
-		"@gov.au/keyword-list": "latest",
-		"@gov.au/link-list": "latest",
-		"@gov.au/page-alerts": "latest",
-		"@gov.au/progress-indicator": "latest",
-		"@gov.au/responsive-media": "latest",
-		"@gov.au/select": "latest",
-		"@gov.au/skip-link": "latest",
-		"@gov.au/tags": "latest",
-		"@gov.au/text-inputs": "latest",
+		"@gov.au/body": "^2.0.7",
+		"@gov.au/breadcrumbs": "^2.1.1",
+		"@gov.au/buttons": "^3.0.1",
+		"@gov.au/callout": "^2.0.5",
+		"@gov.au/control-input": "^2.1.3",
+		"@gov.au/core": "^3.0.0",
+		"@gov.au/cta-link": "^2.1.1",
+		"@gov.au/direction-links": "^2.1.1",
+		"@gov.au/footer": "^2.1.3",
+		"@gov.au/grid-12": "^2.0.5",
+		"@gov.au/header": "^4.1.1",
+		"@gov.au/headings": "^2.0.5",
+		"@gov.au/inpage-nav": "^2.0.5",
+		"@gov.au/keyword-list": "^2.1.1",
+		"@gov.au/link-list": "^2.1.1",
+		"@gov.au/page-alerts": "^2.0.5",
+		"@gov.au/progress-indicator": "^3.1.1",
+		"@gov.au/responsive-media": "^2.0.8",
+		"@gov.au/select": "^2.0.5",
+		"@gov.au/skip-link": "^2.0.6",
+		"@gov.au/tags": "^3.1.1",
+		"@gov.au/text-inputs": "^2.0.6",
 		"autoprefixer": "^7.2.3",
 		"cfonts": "^1.1.3",
 		"concat-cli": "^4.0.0",
