Updates to the content

--- a/content/accessibility-inclusivity-2/accessible-formats/index.yml
+++ b/content/accessibility-inclusivity-2/accessible-formats/index.yml
@@ -15,7 +15,7 @@ main:
   - body.3.md
   - right-column/component-5.md
   - body.4.md
-  - right-column/component-6.md
+  - body.5.md
   - right-column/component-7.md
   - right-column/component-8.md
 
