--- a/content/accessibility-inclusivity-2/accessible-formats/index.yml
+++ b/content/accessibility-inclusivity-2/accessible-formats/index.yml
@@ -7,6 +7,7 @@ header:
   - /_shared/header-and-print.md
 
 main:
+  - links/link-1.md
   - body.1.md
   - right-column/component-1.md
   - body.2.md
