Added L1 to top menu but not implemented on the new prototype page

--- a/content/accessibility-inclusivity-2/index.yml
+++ b/content/accessibility-inclusivity-2/index.yml
@@ -5,8 +5,7 @@ showheader: false
 
 header:
   - /_shared/header-sans-menu.md
-
-rightCol: ''
+  # - /_shared/header-menu-ia1.md
 
 main:
   - body.md
